--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_dotenv: ^5.0.2
   oauth2: ^2.0.0
+  path_provider:
 
 dev_dependencies:
   flutter_test:
