--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,11 @@ dependencies:
   flutter_dotenv: ^5.0.2
   oauth2: ^2.0.0
   path_provider:
+  json_annotation: ^4.4.0
 
 dev_dependencies:
+  build_runner: ^2.0.0
+  json_serializable: ^6.1.5
   flutter_test:
     sdk: flutter
 
