--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   path_provider:
   json_annotation: ^4.4.0
   flutter_svg: ^1.0.3
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   build_runner: ^2.0.0
